src/info.log
/bin/sh: 1: llvm-config: not found
ast.cpp: In member function ‘virtual llvm::Value* FunctionDeclaration::codeGen(CodeGenerator&)’:
ast.cpp:604:22: error: ‘CreateEntryBlockAlloca’ was not declared in this scope
  604 |         auto Alloc = CreateEntryBlockAlloca(Func, this->arguments.at(Index)->id.name, ArgTypes[Index]);
      |                      ^~~~~~~~~~~~~~~~~~~~~~
ast.cpp:608:56: error: ‘class VariableDeclaration’ has no member named ‘_Name’
  608 |         context.AddVariable(this->arguments.at(Index)->_Name, Alloc);
      |                                                        ^~~~~
ast.cpp:611:13: error: ‘class CodeGenerator’ has no member named ‘EnterFunction’; did you mean ‘CurrFunction’?
  611 |     context.EnterFunction(Func);
      |             ^~~~~~~~~~~~~
      |             CurrFunction
ast.cpp:615:13: error: ‘class CodeGenerator’ has no member named ‘LeaveFunction’; did you mean ‘AddFunction’?
  615 |     context.LeaveFunction();
      |             ^~~~~~~~~~~~~
      |             AddFunction
make: *** [Makefile:19: ast.o] Error 1
